# order-book-exchange

./: .env.example  .gitattributes  .gitignore  AXUM_ADVANCED_GUIDE.md  Axum_advanced.md  CLAUDE.md  CTRADER_FIX_QUICKSTART.md  CTRADER_FIX_STREAMING.md  CTRADER_PASSWORD_SETUP.md  Cargo.toml  DATABASE_DATA_ENGINEERING.md  DATABASE_SETUP.md  DATASOURCE_API.md  FIX_FIELD_ORDER_FIX.md  FIX_FINAL_FIX.md  FIX_INSERTION_ORDER_FIX.md  FIX_MESSAGE_ORDER_FIX.md  FIX_REPEATING_GROUPS_FIX.md  FIX_UPDATE.md  HFT_FEATURES_ROADMAP.md  LOCK_FREE_ARCHITECTURE.md  MEMORY_LAYOUT_DEEP_DIVE.md  ORDER_BOOK_API_SPEC.md  PHASE_2_COMPLETE.md  PHASE_2_FEATURES.md  POSTGRESQL_SETUP.md  POSTMAN_SETUP.md  QUICK_START_SWAGGER.md  README.md  RUST_ATOMICS_DEEP_DIVE.md  RUST_BEST_PRACTICES.md  RUST_CLOSURES_GUIDE.md  RUST_MACROS_GUIDE.md  RUST_PACKAGES_REFERENCE.md  RUST_UNSAFE_DEEP_DIVE.md  SWAGGER_DOCS.md  WEBSOCKET_TESTING.md  docker-compose.yml  postman_collection.json  run_streaming_demo.sh  (+4 more)
.claude/: settings.local.json
.claude/agents/: feature-changelog-generator.md  rust-code-quality-enforcer.md  rust-trading-backend.md  rust-unit-test-writer.md
CheatSheets/: postgres_lock_monitoring_cheatsheet.md  ripgrep-cheatsheet.md
CodeUnderstanding/: rust-codebase-guide.md
HFT_FEATURES/: ADDITIONAL_HFT_FEATURES.md
Interview/: JANE_STREET_JUMP_TRADING_GUIDE.md
OrderTypes/: POST_ONLY_ORDERS.md  STOP_ORDERS_AND_TRIGGER_ENGINE.md  STP_ORDERS.md  TIF_ORDERS.md
Todos/: postgresql_learning_roadmap.md
features/: 01_market_data_feed_parser.md  02_risk_management_engine.md  03_custom_memory_allocator.md  07_kernel_bypass_networking.md  09_webassembly_trading_bot.md  DATABASE_DATA_ENGINEERING.md  FUTURE_ENHANCEMENTS.md  LOCK_FREE_ARCHITECTURE.md  PHASE_3_ULTRA_LOW_LATENCY.md
migrations/: manual_continuous_aggregates.sql
migrations/00000000000001_create_symbols_table/: down.sql  up.sql
migrations/00000000000002_create_ticks_table/: down.sql  up.sql
migrations/00000000000003_create_ticks_hypertable/: down.sql  up.sql
migrations/00000000000004_create_ohlc_candles_table/: down.sql  up.sql
migrations/00000000000005_create_ohlc_hypertable/: down.sql  up.sql
monitoring/: .env.example  .gitignore  README.md  docker-compose.yml  start.sh  stop.sh
monitoring/loki/: loki-config.yml
rabbitmq/: README.md  definitions.json  rabbitmq.conf
src/: lib.rs  main.rs
(+99 files in other folders)
