[package]
name = "order-book-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower = "0.4"
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
tokio-stream = "0.1"
futures = "0.3"
dashmap = "6.0"

# cTrader FIX API dependencies
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec"] }

# HFT Features - Phase 1, 5
hdrhistogram = "7.5"
bincode = "1.3"

# RabbitMQ integration
lapin = "2.3"

# PostgreSQL and TimescaleDB integration
diesel = { version = "2.1", features = ["postgres", "numeric", "chrono", "r2d2"] }
diesel_migrations = "2.1"
diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }
deadpool-diesel = { version = "0.5", features = ["postgres"] }
dotenvy = "0.15"

# Cron scheduler for symbol sync
tokio-cron-scheduler = "0.10"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
